making my face all vector cos iOS isn't handling my bitmap-inside-an-svg trick fixing menu controls and nag width for tiny-bear changing footer to look better on smaller screens

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -329,14 +329,15 @@ header {
   .menu-controls a {
       position: fixed;
       display: block;
-      color: $nav-color;
       @include img-svg('menu-white');
-      background: $frame-color;
+      background-position: center ;
+      background-color: $frame-color;
       text-align: center;
       text-decoration: none;
       transition: all 0.3s ease;
-      padding: 0.4em 0.7em;
-      margin: 0.5em;
+      width: 1.5em;
+      height: 1.8em;
+      margin: 0.3em;
       // border-radius: 100%;
       border: none;
   }
@@ -355,7 +356,7 @@ header {
       display: inline-block;
       color: white;
       font-size: 0.8em;
-      margin: 0 0.8em;
+      margin: 0;
     }
   }
 
@@ -616,7 +617,11 @@ footer {
   padding-top: 25%;
 
   @include breakpoint(baby-bear) { 
-    background-position: 16px bottom;
+    padding-top: 35%;
+  }
+
+  @include breakpoint(tiny-bear) { 
+    padding-top: 55%;
   }
 }
 
@@ -629,7 +634,7 @@ footer {
   right: 99px;
 
   @include breakpoint(baby-bear) { 
-    right: 67px;
+    right: 20px;
   }
 }
 
@@ -645,7 +650,11 @@ footer {
   }
 
   @include breakpoint(baby-bear) { 
-    right: 1em;
+    right: 0.5em;
+  }
+
+  @include breakpoint(tiny-bear) { 
+    right: 0;
   }
 }
 
@@ -672,10 +681,10 @@ footer {
   }
 
 .tom-servo {
-  padding: 2.5em 2em;
+  padding: 2em 1.5em;
   max-width: 15em;
   width: 40%;
-  width: calc(45% - 4em);
+  width: calc(46% - 3em);
   margin: 5em 0 0 0;
   }
 
@@ -689,7 +698,7 @@ footer {
   margin: 0 0 10em 0;
   padding: 2em 1.5em;
   max-width: 6.5em;
-  min-width: 5em;
+  min-width: 4em;
   width: 25%;
   width: calc(25% - 3em);
   font-weight: bold;
@@ -704,7 +713,7 @@ footer {
 
 .crow-t-robot{
   padding: 2em 1em;
-  min-width: 5em;
+  min-width: 3em;
   width: 15%;
   width: calc(15% - 2em);
   margin: 0 0 1.5em 0;
